# otel-ml-demo

./: README.md  infer.sh  pyproject.toml  test.sh  train.sh
.claude/: settings.local.json
data/: sample_sdss.csv
models/: data_preprocessing.joblib  stellar_classifier.joblib
src/otel_ml_demo/: __init__.py  data_loader.py  inference.py  model.py  pipeline.py
tests/: conftest.py  test_data_loader.py  test_integration.py  test_model.py  test_regression.py
